<resources>
    <string name="app_name">UniversityEnrollmentApp</string>
    <string name="enrollment_successful_title">Enrollment Successful!</string>
    <string name="success_icon_desc">Success icon</string>
    <string name="enrollment_confirmation_message">Congratulations!\nWe are pleased to inform you that your enrollment has been successfully completed.</string>
    <string name="view_enrollment_details">View Enrollment Details</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="contact">Contact</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="bike_illustration">Bike Illustration</string>
    <string name="thank_you_for_choosing_enroll_app_your_all_in_one_solution_for_a_smooth_and_hassle_free_university_enrollment_process_whether_you_re_a_first_year_student_or_continuing_your_academic_journey_our_app_is_here_to_guide_you_every_step_of_the_way">Thank you for choosing Enroll App, your all-in-one solution for a smooth and hassle-free university enrollment process! Whether you\'re a first-year student or continuing your academic journey, our app is here to guide you every step of the way.</string>
    <string name="or">Or</string>
    <string name="welcome_to_enroll_app">Welcome to Enroll App!</string>
    <string name="todo">TODO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account!</string>
    <string name="signup_image">Signup Image</string>
    <string name="phone_number_or_email">Phone Number or Email...</string>
    <string name="create_password">Create Password</string>
    <string name="full_name">Full Name</string>
    <string name="sign_in_here">Sign In Here!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>

    <string name="enroll_app">Enroll App</string>
    <string name="enrollment_information">Enrollment Information</string>
    <string name="high_school_name">High School Name</string>
    <string name="enter_your_high_school_name">Enter your high school name</string>
    <string name="high_school_grade_gpa">High school grade/GPA</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="grade_gpa">Grade/GPA</string>
    <string name="yyyy">YYYY</string>
    <string name="program">Program</string>
    <string name="bachelor_s_degree">Bachelor’s Degree</string>
    <string name="master_s_degree">Master’s Degree</string>
    <string name="ph_d_degree">Ph.D. Degree</string>
    <string name="what_faculty_do_you_want_to_study">What faculty do you want to study?</string>
    <string name="enter_your_faculty_name">Enter your faculty name</string>
    <string name="what_major_do_you_want_to_study">What major do you want to study?</string>
    <string name="enter_your_major_name">Enter your major name</string>
    <string name="preferred_study_time">Preferred Study Time</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="why_do_want_to_study_this_major">Why do want to study this major?</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="submit">Submit</string>
    <string name="other">Other</string>
    <string name="back">Back</string>
    <string name="e_g_123_456_7890">(e.g., 123-456-7890)</string>
    <string name="emergency_contact_number">Emergency Contact Number</string>
    <string name="guardian">Guardian</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="parent_guardian">Parent/Guardian</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="parents_name">Parents Name</string>
    <string name="enter_your_email_address">Enter your email address...</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_phone_number">Enter your phone number...</string>
    <string name="phone_number">Phone Number</string>
    <string name="current_address">Current Address</string>
    <string name="st_city_province_country">St., city..., province, country</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="country">Country</string>
    <string name="nationality">Nationality</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="student_name">Student Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="date_of_birth">Date of birth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enrollment_details">Enrollment Details</string>
    <string name="for_enrollment">For Enrollment</string>
    <string name="my_class">My Class</string>
    <string name="campus">Campus</string>
    <string name="next">Next</string>

</resources>