<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/TopBar"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_bar_menu"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="Personal Information"
        app:titleTextAppearance="@style/Toolbar.TitleTextStyle"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/personalInfoTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/enrollment_information"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/high_school_name"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/highSchoolNameEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/card_background"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_high_school_name"
                android:paddingStart="10dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/high_school_grade_gpa"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/graduation_year"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/gpaEt"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_background"
                    android:gravity="center_vertical"
                    android:hint="@string/grade_gpa"
                    android:paddingStart="10dp"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="0dp" />

                <EditText
                    android:id="@+id/graduationYearEt"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_background"
                    android:gravity="center_vertical"
                    android:hint="@string/yyyy"
                    android:paddingStart="10dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/program"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/programRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <RadioButton
                    android:id="@+id/bachelorDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-15dp"
                    android:text="@string/bachelor_s_degree" />

                <RadioButton
                    android:id="@+id/masterDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-15dp"
                    android:text="@string/master_s_degree" />

                <RadioButton
                    android:id="@+id/phdDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-15dp"
                    android:text="@string/ph_d_degree" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/what_faculty_do_you_want_to_study"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/facultyChoiceEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/card_background"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_faculty_name"
                android:paddingStart="10dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/what_major_do_you_want_to_study"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/majorChoiceEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/card_background"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_major_name"
                android:paddingStart="10dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/preferred_study_time"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/studyTimeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/morning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/morning" />

                <RadioButton
                    android:id="@+id/afternoon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/afternoon" />

                <RadioButton
                    android:id="@+id/evening"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/evening" />
            </RadioGroup>

            <TextView
                android:id="@+id/majorQuestionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/why_do_want_to_study_this_major"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/majorQuestionEt"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_background"
                android:gravity="top"
                android:hint="@string/enter_your_answer"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/text"
                    app:strokeWidth="0.5dp" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="0dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/submit"
                    android:textColor="@color/black"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/green"
                    app:strokeWidth="1dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/bottomNavigation"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="#000080"-->
    <!--        app:itemIconTint="#FFFFFF"-->
    <!--        app:itemTextColor="#FFFFFF"-->
    <!--        app:labelVisibilityMode="labeled"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:menu="@menu/bottom_nav_menu" />-->

</androidx.constraintlayout.widget.ConstraintLayout>